@@ -164,6 +164,7 @@ NEW: The purge of files can purge only if older than a number of seconds
 NEW: Update ActionComm type_code on email message ticket
 NEW: VAT - Admin - Add information on deadline day for submission of VAT declaration
 NEW: expand/collapse permissions on user permission page
+NEW: Show delivery mode on PDF for proposals
 
 
 For developers or integrators:
